--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,18 @@ html {
     text-transform: uppercase;
 }
 
-.ptext .border {
+.ptext.border {
     background-color: #111;
     color: white;
     padding: 20px;
+}
+
+.ptext.border.trans {
+    background-color: transparent;
+}
+
+@media(max-width:568px) {
+    .pimg1.pimg2.pimg3 {
+        background-attachment: scroll;
+    }
 }
